--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,8 @@
-web:
-    image: php:8.0-apache
-    restart: always
-    ports:
-        - "8080:80"
-    volumes:
-        - /home/msed/apm/src:/var/www/html/apm
-    links:
-        - db
+docker-compose.yml
+
+
 db:
-    image: mariadb:10.3.9
+    image: mariadb
     restart: always
     environment:
-        MYSQL_ROOT_PASSWORD: apm
+      MYSQL_ROOT_PASSWORD: example
