--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,10 +5,12 @@ web:
       - "8080:80"
   volumes:
       - /home/msed/apm/src:/var/www/html/apm
+  environment:
+    APM_STACK_PATH : "/home/msed/apm/src"
   links:
       - db
 db:
   image: mariadb:10.3.9
   restart: always
   environment:
-      MYSQL_ROOT_PASSWORD: apm
+    MYSQL_ROOT_PASSWORD: apm
